[package]
name = "mochi"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bp"
path = "src/main.rs"

[[bin]]
name = "blueprint"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
