[package]
name = "blueprint-cli"
version = "0.1.3"
edition = "2021"
description = "A simple file scaffolding tool"
license = "MIT"

[[bin]]
name = "bp"
path = "src/main.rs"

[[bin]]
name = "blueprint"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
colored = "2.0.0"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
thiserror = "1.0.40"
